apps/node-demo/staging/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-preview-service
  labels:
    role: node-api
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 4400
      protocol: TCP
      nodePort: 30200
  type: NodePort
