apps/node-demo/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api-service
  ports:
  - name: "80"
    nodePort: 30100
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
